<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/client_id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_id"
            app:errorEnabled="false"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/client_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enable_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_authentication"
            app:switchPadding="20dp"
            />

        <LinearLayout
            android:id="@+id/auth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auth_user_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:errorEnabled="false"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auth_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="false"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>